// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsPage should match snapshot and render EventDetail 1`] = `
<Fragment>
  <Connect(Helmet)
    title="erstes Event - Augsburg"
  />
  <Translate(EventDetail)
    event={
      EventModel {
        "_address": "address",
        "_allDay": true,
        "_availableLanguages": Map {
          "en" => 1234,
          "ar" => 1236,
        },
        "_content": "content",
        "_endDate": "2017-11-18T19:30:00.000Z",
        "_excerpt": "excerpt",
        "_id": 1235,
        "_startDate": "2017-11-18T09:30:00.000Z",
        "_thumbnail": "thumbnail",
        "_title": "erstes Event",
        "_town": "town",
      }
    }
    language="en"
    onInternalLinkClick={[Function]}
  />
</Fragment>
`;

exports[`EventsPage should match snapshot and render EventList 1`] = `
<Fragment>
  <Connect(Helmet)
    title="pageTitle - Augsburg"
  />
  <Translate(EventList)
    city="augsburg"
    events={
      Array [
        EventModel {
          "_address": "address",
          "_allDay": true,
          "_availableLanguages": Map {
            "de" => 1235,
            "ar" => 1236,
          },
          "_content": "content",
          "_endDate": "2017-11-18T19:30:00.000Z",
          "_excerpt": "excerpt",
          "_id": 1234,
          "_startDate": "2017-11-18T09:30:00.000Z",
          "_thumbnail": "thumbnail",
          "_title": "first Event",
          "_town": "town",
        },
        EventModel {
          "_address": "address",
          "_allDay": true,
          "_availableLanguages": Map {
            "en" => 1234,
            "ar" => 1236,
          },
          "_content": "content",
          "_endDate": "2017-11-18T19:30:00.000Z",
          "_excerpt": "excerpt",
          "_id": 1235,
          "_startDate": "2017-11-18T09:30:00.000Z",
          "_thumbnail": "thumbnail",
          "_title": "erstes Event",
          "_town": "town",
        },
        EventModel {
          "_address": "address",
          "_allDay": true,
          "_availableLanguages": Map {
            "de" => 1235,
            "ar" => 1236,
          },
          "_content": "content",
          "_endDate": "2017-11-18T19:30:00.000Z",
          "_excerpt": "excerpt",
          "_id": 2,
          "_startDate": "2017-11-18T09:30:00.000Z",
          "_thumbnail": "thumbnail",
          "_title": "second Event",
          "_town": "town",
        },
      ]
    }
    language="en"
    onInternalLinkClick={[Function]}
  />
</Fragment>
`;

exports[`EventsPage should match snapshot and render Failure if event does not exist 1`] = `
<Translate(FailureSwitcher)
  error={[Error: The event 234729 does not exist here.]}
/>
`;
